--- a/src/index.css
+++ b/src/index.css
@@ -373,12 +373,19 @@ input:focus {
 }
 @media (min-width: 770px) {
     .row {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (min-width: 1170px) {
+    .row {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 .item {
     background: var(--clr-light);
     padding-bottom: 15px;
+    max-width: 25rem;
 }
 .image-container img {
     border-radius: 0;
@@ -394,7 +401,8 @@ input:focus {
     font-size: 18px;
     margin: 1rem auto;
     color: var(--primary-700);
-    font-weight: bolder;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
 .px-2 {
     padding: 1rem 1.5rem;
